# data

./: .env.example  .gitignore  CHANGELOG.md  README.md  TROUBLESHOOTING.md  main.py  pyproject.toml  start_md_storage.bat  start_scheduler.bat  start_store_market_data.bat  start_update_instruments.bat
config/: brokers.yaml  config.sample.yaml  config_md.yaml  config_td.yaml  logger.yaml  scheduler.yaml
data/: instruments.json  trading_times.json
docs/: MESSAGE_FORMAT.md  QUICK_START.md  SIMNOW_INSTRUMENTS_GUIDE.md  development_CN.md  logger_default_tag_guide.md  logger_guide_CN.md  redis_setup_CN.md  storage_structure.md  troubleshooting_CN.md
scripts/: README.md  auto_login_td.py  check_config.py  check_dependencies.py  check_influx_final.py  check_influxdb_data.py  check_influxdb_simple.py  check_kline_disk_usage.py  check_tables.py  cleanup_old_klines.py  debug_login.py  init_influxdb.py  load_env.py  query_influxdb_direct.py  query_kline_csv.py  query_tick_csv.py  reset_influxdb.py  retry_failed_data.py  run_tests.bat  run_tests.py  scheduler.py  start_and_login.bat  store_market_data.py  subscribe_and_store_ticks.py  test_auto_query_instruments.py  test_csv_storage.py  test_ctp_connection.py  test_direct_write.py  test_futures_filter.py  test_logger_default_tag.py  test_new_storage_structure.py  test_server_validation.py  test_simple_login.py  test_storage_client.py  test_websocket_path.py  test_ws_connection.py  update_instruments.py  verify_data.py
src/: __init__.py  run.py
tests/: README.md  __init__.py  test_failure_handler.py  test_kline_builder.py  (+3 more)
(+36 files in other folders)
