[project]
name = "homalos-data"
version = "0.1.0"
description = "Homalos Data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "anyio>=4.12.0",
    "apscheduler>=3.11.2",
    "fastapi>=0.127.0",
    "gmssl>=3.2.2",
    "loguru>=0.7.3",
    "msgpack>=1.1.2",
    "numpy>=2.4.0",
    "orjson>=3.11.5",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "ruff>=0.14.10",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
]
